--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prodStart":"node src/index.js",
     "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,10 +19,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "prisma": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12",
-    "prisma": "^3.0.2"
+    "nodemon": "^2.0.12"
   }
 }
